# mystic-square

./: .gitignore  BackgroundEnum.hh  CMakeLists.txt  Game.cpp  Game.hh  MysticSquare-en_US.ts  MysticSquare-fr_FR.ts  README.md  Stub.hh  gamewidget.cpp  gamewidget.hh  main.cpp  mainwindow.cpp  mainwindow.hh  mainwindow.ui  newgamedialog.cpp  newgamedialog.hh  newgamedialog.ui  resources.qrc
test-games/: partie_3x3_presque_finie.save  partie_6x6.save
